# cbutools

./: .flake8  .gitignore  LICENSE  README.org  pyproject.toml
bctools/: __init__.py  cbu.py  classes.py  hamming.py  larry.py
bctools/data/: SLX-22398.SITTA1.s_1.r_1_small.fq
bctools/templates/: larry1_template.ipynb
bctools/tests/: larry_test.py  test_cbu.py  test_hamming.py  test_larry.py  test_report.py
bctools/tests/data/: cbu_assigned.csv  cbu_umicount.csv  mock_larry_cutadapt_r1.fq  mock_larry_cutadapt_r2.fq
cbutools/: hamming.py  larry.py
cbutools/templates/: larry1_template.ipynb
cbutools/tests/: test_cbu.py  test_hamming.py  test_larry.py  test_report.py
cbutools/tests/data/: SLX-22398.SITTA1.s_1.r_2_small.fq  cbu_assigned_dispr.csv  cbu_hamfiltered.csv  cbu_raw.csv  cbu_readfiltered.csv  cbu_umifiltered.csv  mock_larry_counting_r1.fq  mock_larry_counting_r2.fq
